# starlette-rest-api-studies

./: .coveragerc  .gitignore  README.md  docker-compose.yaml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: adc443570c81_spreadsheet.py  cf5d337f90b6_status.py
app/application/controllers/: controller.py  create_spreadsheet_controller.py  list_spreadsheet_controller.py  spreadsheet_controller.py
app/application/errors/: http.py  http_errors.py  validation.py
app/application/helpers/: dataframe.py  http.py  results_functions.py
app/application/services/: file_upload_service.py
app/application/validation/: allowed-mime-types.py  allowed_mime_types.py  builder.py  composite.py  max_file_size.py  required.py  spreadsheet_integration.py  validator.py
app/data/interfaces/: file_uploader_interface.py  spreadsheet_repository_interface.py
app/data/repositories/: create_spreadsheet.py  list_spreadsheets.py  upload_spreadsheet.py
app/domain/entities/: file.py  spreadsheet.py  status.py
app/domain/usecases/: create_spreadsheet.py  file_upload.py  find_spreadsheet.py  list_spreadsheet.py
app/infra/errors/: file_upload_errors.py
app/infra/gateways/: aws_s3_file_upload.py
app/main/adapter/: starlette_adapter.py
app/main/composite/: __init__.py  create_spreadsheet_composite.py  file_upload_service_composite.py  list_spreadsheet_composite.py
app/main/config/: app.py  settings.py
app/main/interface/: route.py  service.py
app/main/middlewares/: __init__.py  index.py
tests/: conftest.py
tests/controllers/: test_controller.py
(+30 files in other folders)
