[tool.poetry]
name = "starlette-rest-api-studies"
version = "0.1.0"
description = ""
authors = ["Paulo Alexandre Mello <palexandremello@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = "^0.20.4"
pandas = "^1.4.4"
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-mock = "^3.8.2"

[tool.coverage.run]
omit = [".*", "*/__init__.py", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 70

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
